# SSD_Detector_for_road_training

./: LICENSE  README.md  SSDs_Model.ipynb
SSD_Trainer/: 1-Detector-NN-Architecture-Copy1.ipynb  2-Generating-Anchor-Boxes.ipynb  3-Matching-Predictions-with-Ground-Truth.ipynb  4-Loss-Function.ipynb  5-Experiment.ipynb  5-Experiment.py  Inference_pipeline.ipynb  JIT_TorchScript.ipynb  Single-Stage-Object-Detection.ipynb  View_Dataset.ipynb  build_model.py  check_anchor_boxes.py  custom_data_loader.ipynb  custom_dataset_try.py  cutom_inference.py  detector.py
SSD_Trainer/trainer/: custom_encoder.py  datasets.py  encoder.py  hooks.py
ssd_libTorch/: CMakeLists.txt  inference.cpp
ssd_libTorch/src/: inference.cpp
